@@ -165,6 +165,14 @@ lib/SPVM/Net/SSLeay/SSL_SESSION.c
 lib/SPVM/Net/SSLeay/SSL_SESSION.config
 lib/SPVM/Net/SSLeay/SSL_SESSION.pm
 lib/SPVM/Net/SSLeay/SSL_SESSION.spvm
+lib/SPVM/Net/SSLeay/Util.pm
+lib/SPVM/Net/SSLeay/Util.spvm
+lib/SPVM/Net/SSLeay/Util/OCSP.pm
+lib/SPVM/Net/SSLeay/Util/OCSP.spvm
+lib/SPVM/Net/SSLeay/Util/PKCS12.pm
+lib/SPVM/Net/SSLeay/Util/PKCS12.spvm
+lib/SPVM/Net/SSLeay/Util/X509.pm
+lib/SPVM/Net/SSLeay/Util/X509.spvm
 lib/SPVM/Net/SSLeay/X509.c
 lib/SPVM/Net/SSLeay/X509.config
 lib/SPVM/Net/SSLeay/X509.pm
